<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/side_padding"
    android:paddingRight="@dimen/side_padding"
    tools:context="sk.hidasi.balance_tr.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:text="@string/about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_text" />

        <TextView
            style="@style/TitleText"
            android:text="@string/how_to_create" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_create_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="onViewInstructions"
            android:text="@string/how_to_create" />

        <TextView
            style="@style/TitleText"
            android:text="@string/install_official_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install_official_app_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="onInstallOfficialApp"
            android:text="@string/install_official_app" />

        <TextView
            style="@style/TitleText"
            android:text="@string/hide_launcher_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_launcher_icon_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="onHideLauncherIcon"
            android:text="@string/hide_launcher_icon" />

    </LinearLayout>
</ScrollView>
