<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="sk.hidasi.balance_tr.ConfigureActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/serial_number"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android.support.design:counterEnabled="true"
			android.support.design:counterMaxLength="10">
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/card_serial_hint"
				android:textSize="20sp"
				android:maxLength="10"
				android:inputType="number"/>
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/four_digits"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android.support.design:counterEnabled="true"
			android.support.design:counterMaxLength="4">
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/pan_4_digits_hint"
				android:textSize="20sp"
				android:maxLength="4"
				android:inputType="number"/>
		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:id="@+id/duration_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"/>

		<SeekBar
			style="@style/Widget.AppCompat.SeekBar.Discrete"
			android:id="@+id/duration_seek_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="11"/>

		<Switch
			android:id="@+id/dark_theme"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android:text="@string/dark_theme"
			android:textSize="16sp"/>

		<TextView
			android:id="@+id/usage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android:text="@string/hint"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="16sp"/>

		<Button
			android:id="@+id/add_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android:text="@string/save_widget"
			android:textSize="16sp"
			android:enabled="false"/>

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/configure_horizontal_margin"
			android:text="@string/disclaimer"
			android:textSize="12sp"/>

	</LinearLayout>

</ScrollView>